[package]
name = "lx-parser"
version = "0.1.0"
authors = ["Irfan Ghat"]
edition = "2021"
description = "A simple url parser with json serialization"
homepage = "https://github.com/lexara-prime-ai/url-parser"
repository = "https://github.com/lexara-prime-ai/url-parser"
readme = "README.md"
keywords = ["parser", "web", "http", "api"]
categories = ["Web programming"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
url = "2.5.0"
serde = { version = "1.0.193", features = ["derive"] }
